Aims 3 and 4 edited with cgpt.

--- a/src/aim3/aim3.tex
+++ b/src/aim3/aim3.tex
@@ -3,19 +3,19 @@
 \section{Introduction}
 In order to make autonomously measuring joint kinematics a clinically viable tool, the movements and motions being measured must be standardized.
 Similar efforts have been put into standardized post-operative outcome metrics like the Knee Society Score (KSS), Knee Injury and Osteoarthritis Outcome Score (KOOS), the Forgotten Joint Score, the Western Ontario and McMaster Universities Osteoarthritis Index (WOMAC), among others.
-Efforts put toward standardizing these metrics allow different groups, different implants, and different surgical techniques to be reliably compared to one another as objectively as possible.
+Standardizing these metrics enables reliable and objective comparisons across different groups, implants, and surgical techniques.
 This same need for standardized metrics exists when quantifying joint kinematics for research and clinical purposes.
 Unfortunately, no such standardization exists for quantifying joint kinematics.
-Most groups will perform roughly the same activities of daily living (Some form of walking, stair rise, chair rise, kneel, lunge, and squat), but the differences in how each group performs these activities prevent highly accurate direct comparison.
+While most groups perform similar activities of daily living (Some form of walking, stair rise, chair rise, kneel, lunge, and squat), variations in how these activities are executed hinder direct comparison accuracy.
 
 So, this chapter describes a data-driven approach toward being able to select the highest yield activities to be included in a clinical kinematics examination.
-In order to be a clinically practical method, the time to collect the data must not be excessive, and so a brief and succinct set of activities is preferred.
+o render the autonomous measurement of joint kinematics a viable clinical tool, the time to collect the data must not be excessive, and so a brief and succinct set of activities is preferred.
 From these constraints, the first approach stems from the thought, ``All kinematics data is coming from the same patient. Are there underlying characteristics from one activity that translate to all activities?''
 An example might arise: ``Can we predict the patient's stair rise kinematics from their walking kinematics?''
 The motivating intuition behind these ideas is that they all come from the same patient, and are being driven by the same underlying musculature.
 The following chapter will detail the beginning of an experimental procedure, and why the data was insufficient for answering the above questions.
 However, another question arises: ``Given the statistical parameters surrounding a ``good outcome'' or ``bad outcome'', might we be able to generated synthetic patient data to overcome the lack of real-world kinematics data?''
-This is an extremely pertinent questions in the world of ``big data''.
+This question is particularly relevant in the context of 'big data' and its growing impact.
 Many modern algorithms leverage an enormous amount of data, often more than traditional methods of quantified biomechanics are able to generate.
 Additionally, HIPAA requirements make it incredibly difficult to share data, slowing down the rapid progress in curated algorithms for biomechanics data that we see with open datasets like ImageNet \cite{russakovskyImageNetLargeScale2015}.
 
